Added Checker Framework for null safety checking, and fixed tons of reported issues (#1031)